# summer-camp-api

./: db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml
courses/: models.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py
summer_camp_api_project/: asgi.py  settings.py  urls.py  wsgi.py
